# clockwork

./: CLAUDE.md  OLD_CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  design.md  rpc.md  tracker-config.md  trial-calc.md
harnesses/: __init__.py  pi_rpc.py
issue_tracker/: __init__.py  cli.py  config.py  lint.py  model.py  store.py
issues/: __init__.py  cli.py  config.py  deps.py  lint.py  model.py  service.py  store.py
orchestrator/: __init__.py  cli.py  formatter.py  issues.py  loop.py  tracker.py  worker.py
project-template/: AGENTS.md  README.md
project-template/docs/: design.md  vocabulary.md
skills/: README.md
skills/design-session/: SKILL.md
skills/domain-modeling/: SKILL.md
skills/grilling/: SKILL.md
skills/issue-tracker/: SKILL.md
skills/wayfinder/: SKILL.md
tests/: test_issues_cli.py  test_milestone.py  test_orchestrator_issues.py  test_service.py
trial-calc/: AGENTS.md  setup-tracker.sh
trial-calc/calc/: __init__.py
trial-calc/tests/: test_smoke.py
trials/: README.md
trials/calc/: setup-issues.sh  setup-tracker.sh
trials/calc/calc/: __init__.py
trials/calc/docs/: design.md
