[project]
name = "clockwork"
version = "0.1.0"
description = "Unattended ticket loop driving a headless agent + issue tracker CLI"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# Tests import the packages in-tree without an editable install.
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
# One `uv tool install .` ships both entry points.
clockwork = "orchestrator.cli:main"
issues = "issues.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["harnesses", "issues", "orchestrator"]
